; ModuleID = '/home/carl/AnghaBench/php-src/ext/gd/extr_gd.c_php_gd_assign_libgdimageptr_as_extgdimage.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/gd/extr_gd.c_php_gd_assign_libgdimageptr_as_extgdimage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@gd_image_ce = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @php_gd_assign_libgdimageptr_as_extgdimage(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32*, i32** %3, align 8
  %6 = load i32, i32* @gd_image_ce, align 4
  %7 = call i32 @object_init_ex(i32* %5, i32 %6)
  %8 = load i32, i32* %4, align 4
  %9 = load i32*, i32** %3, align 8
  %10 = call i32 @Z_OBJ_P(i32* %9)
  %11 = call %struct.TYPE_2__* @php_gd_exgdimage_from_zobj_p(i32 %10)
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  store i32 %8, i32* %12, align 4
  ret void
}

declare dso_local i32 @object_init_ex(i32*, i32) #1

declare dso_local %struct.TYPE_2__* @php_gd_exgdimage_from_zobj_p(i32) #1

declare dso_local i32 @Z_OBJ_P(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
